# ida-script-mcp-main

./: .gitignore  CHANGELOG.md  DISPOSABLE_VM_GUEST_AGENT_ARCHITECTURE.md  DISPOSABLE_VM_GUEST_AGENT_STATUS.md  DISPOSABLE_VM_GUEST_AGENT_TEST_PROGRESS.md  DISPOSABLE_VM_WORKFLOW_LESSONS.md  LICENSE  MANIFEST.in  PORTABLE_WORKFLOW_DEVELOPMENT_LESSONS.md  PUBLISHING.md  README.md  TESTED.md  TESTING_HANDOFF.md  UNTESTED.md  V2.3_ISOLATED_EXECUTION_PLAN.md  pyproject.toml
.github/workflows/: disposable-vm-guest-agent-smoke.yml  host-runner-smoke.yml  vmware-restore-smoke.yml
docs/: SELF_HOSTED_IDA_RUNNER.md  disposable_vm_guest_agent.md
src/ida_script_mcp/: __init__.py  change_protocol.py  change_recorder.py  execution.py  ida_plugin.py  installer.py  installer_data.py  isolated_manager.py  isolated_protocol.py  process_utils.py  protocol.py  py.typed  server.py  worker_runner.py
src/ida_script_mcp/disposable_vm/: __init__.py  host_controller.py  workflow_install.py  workflow_runner.py
src/ida_script_mcp/guest_vm/: __init__.py  agent.py  automation_requirements.txt  required_automation_imports.py  required_imports.py
src/ida_script_mcp/payload/: U004_real_MCP_client_end-to-end.py  U004_real_MCP_client_worker_script.py  U005_multi_IDA_instance_selection.py  U008_decompile_corner_cases.py  U008_xrefs_corner_cases.py  U010_rename_complex_cases.py  U011_comment_function_comment_complex.py  U013_patch_bytes_complex_cases.py  __init__.py  disposable_vm.py  guest_worker_chain_payload.py  ida_api_test.py  ida_plugin_install.py  ida_u004_real_mcp_client_test.py  ida_u005_multi_ida_instance_test.py  ida_u007_decompile_corner_case_test.py  ida_u008_decompile_corner_case_test.py  ida_u008_xrefs_corner_case_test.py  ida_u010_rename_complex_test.py  ida_u011_comment_function_comment_test.py  ida_u013_patch_bytes_complex_test.py  ida_worker_chain_test.py  u012_set_type_complex_worker_script.py  worker_chain_user_script.py  worker_crash_user_script.py  worker_recorder_error_user_script.py  worker_result_missing_user_script.py  worker_timeout_user_script.py
tests/: __init__.py  test_change_protocol.py  test_change_recorder.py  test_disposable_vm_host_controller.py  test_disposable_vm_payload.py  test_execution.py  test_guest_vm_agent.py  test_guest_vm_required_automation_imports.py  test_guest_vm_required_imports.py  test_ida_api_test_payload.py  test_ida_plugin_execute_rejection.py  test_ida_plugin_functions_validation.py  test_ida_plugin_install_payload.py  test_ida_plugin_metadata.py  test_isolated_manager.py  test_no_pydantic_fallback.py  test_protocol.py  test_protocol_fallback.py  test_real_mcp_client_payload.py  test_server.py  test_worker_runner.py  test_workflow_runner.py
