[project]
name = "ida-script-mcp"
version = "1.1.0"
description = "MCP server for structured IDA analysis and IDAPython execution with multi-instance support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "IDA Script MCP Contributors" },
]
maintainers = [
    { name = "IDA Script MCP Contributors" },
]
keywords = [
    "ida",
    "ida-pro",
    "mcp",
    "model-context-protocol",
    "idapython",
    "reverse-engineering",
    "binary-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.25.0",
    "pydantic>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
disposable-vm-host = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
disposable-vm-guest = [
    "requests>=2.32.0",
]
disposable-vm-guest-automation = [
    "requests>=2.32.0",
    "pywinauto>=0.6.8",
    "psutil>=5.9.0",
]
disposable-vm = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ida-script-mcp"
Documentation = "https://github.com/yourusername/ida-script-mcp#readme"
Repository = "https://github.com/yourusername/ida-script-mcp.git"
Issues = "https://github.com/yourusername/ida-script-mcp/issues"
Changelog = "https://github.com/yourusername/ida-script-mcp/blob/main/CHANGELOG.md"

[project.scripts]
ida-script-mcp = "ida_script_mcp.server:main"
ida-script-mcp-install = "ida_script_mcp.installer:main"
ida-script-mcp-vm-host-controller = "ida_script_mcp.disposable_vm.host_controller:main"
ida-script-mcp-vm-guest-agent = "ida_script_mcp.guest_vm.agent:main"
ida-script-mcp-vm-guest-check-imports = "ida_script_mcp.guest_vm.required_imports:main"
ida-script-mcp-vm-guest-check-automation-imports = "ida_script_mcp.guest_vm.required_automation_imports:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ida_script_mcp = [
    "py.typed",
    "guest_vm/requirements.txt",
    "guest_vm/automation_requirements.txt",
    "resources/*.md",
    "resources/idapython/*.md",
    "resources/idapython/docs/*.md",
]

[tool.pyright]
include = ["src/ida_script_mcp"]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
